--- a/Project/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Project/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,11 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating m-2">
+                <input asp-for="Input.BirthDate" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.BirthDate"></label>
+                <span asp-validation-for="Input.BirthDate" class="text-danger"></span>
+            </div>
+            <div class="form-floating m-2">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
